rke2/longhorn-system/httproute-longhorn.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    authentik.home.arpa/enabled: "true"
spec:
  parentRefs:
    - name: hwcopeland-gateway
      namespace: kube-system
      sectionName: https
  hostnames:
    - "longhorn.hwcopeland.net"
  rules:
    - backendRefs:
        - name: authentik-server
          namespace: authentik
          port: 80
